# Bike-Station-Monitor-Internship1

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  dev_app.py  pass-role-policy.json  pyproject.toml  requests.ipynb
bike_data_scraper/: http_client.py  index.js  package-lock.json  package.json
bike_data_scraper/csv_client/: csv_handler.py  erik_csv.py
bike_data_scraper/data_access_layer/: dynamodb_handler.py
bike_data_scraper/extensions/: DateExtension.py
bike_data_scraper/handlers/: charts_data_to_s3.py  check_ec2_status.py  data_fetch_and_save_lambda.py  data_preprocessing_2weeks.py  data_scraper.py  first_lambda.py  graphs_data_scraper.py  package.json  second_lambda.py  shut_down_ec2_training_instance.py  start_ec_2_instance.py  test_csv_handler  third_lambda.py  train_test_split_for_training.py  weather_data_handler.py  weather_data_scraper.py
bike_data_scraper/libs/: functions.py
bike_data_scraper/s3_client/: s3_handler.py
bike_data_scraper/sagemaker/: delete_endpoint.py  deploy.py  inference.py  predictor.py  predictor_handler.py  test.ipynb  train.py  training_job.py  upload_train_test.py
data_scraper/handlers/: lambda_scrapper.js  package-lock.json  weather_data_handler.py
events/sample-lambda/: event.json
infrastructure/: data_scraper_stack.py  data_scraper_stage.py  setup.py
infrastructure/ci/: data_scraper_pipeline_stack.py
infrastructure/config/: service-config.yaml
infrastructure/constructs/: check_ec2_status.py  cognito_user_pool.py  data_fetch_and_save.py  data_scraper.py  graphs_data_scraper.py  (+7 more)
(+11 files in other folders)
